--- a/source/css/all.scss
+++ b/source/css/all.scss
@@ -77,6 +77,11 @@
   }
 }
 
+.grid--item figure {
+  height: 500px;
+  overflow: hidden;
+}
+
 .contact .btn {
   background-color: #000;
   color: white;
