--- a/source/partials/_instagram-grid.html.erb
+++ b/source/partials/_instagram-grid.html.erb
@@ -1,73 +1,48 @@
 <div class="row">
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4cY6YPj8Um/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11358035_400921926770627_1852373790_n.jpg" alt="MAN TOOK A SELFIE WITH @ADIDASUK TO A WHOLE NEW LEVEL !!! ">    
     </a>
   </div>
 
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4cY6YPj8Um/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11335058_1609009829369531_1121008596_n.jpg" alt="BLAME IT ON THE ALCOHOL">    
     </a>
   </div>
+
+  <div class="col-md-3 col-xs-6 grid--item">      
+    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
+    </a>
+  </div>
+
+  <div class="col-md-3 col-xs-6 grid--item">      
+    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
+      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
+    </a>
+  </div>
 </div>
-
 <div class="row">
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
     </a>
   </div>
 
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
     </a>
   </div>
 
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
-    <a href="https://instagram.com/p/4e0KpmD8Rd/?taken-by=jordan_denzel" target="__blank">
-      <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11380841_910231265685587_1639114856_n.jpg" alt="Heat of the moment! Wouldn't mind either of these in my wardrobe if I'm honest | ">    
-    </a>
-  </div>
-
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4cY6YPj8Um/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11358035_400921926770627_1852373790_n.jpg" alt="MAN TOOK A SELFIE WITH @ADIDASUK TO A WHOLE NEW LEVEL !!! ">    
     </a>
   </div>
 
-  <div class="col-md-2 col-sm-4 col-xs-6 grid--item">      
+  <div class="col-md-3 col-xs-6 grid--item">      
     <a href="https://instagram.com/p/4cY6YPj8Um/?taken-by=jordan_denzel" target="__blank">
       <img class="featurette-image img-responsive center-block" src="https://igcdn-photos-d-a.akamaihd.net/hphotos-ak-xfa1/t51.2885-15/11335058_1609009829369531_1121008596_n.jpg" alt="BLAME IT ON THE ALCOHOL">    
     </a>
